# AtlasProject

./: .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  README.md
.run/: client.run.xml  engine.run.xml  scene_builder.run.xml  server.run.xml
client/: CMakeLists.txt
client/src/: ClientMain.cpp
client/src/core/: Client.cpp  Client.hpp
engine/: CMakeLists.txt
engine/src/: Atlas.hpp
engine/src/core/: Core.hpp  Event.hpp  Log.cpp  Log.hpp
engine/src/entity/: Actor.hpp  Component.hpp  Registry.hpp
engine/src/renderer/: KeyCode.hpp  Window.cpp  Window.hpp
engine/src/scene/: Scene.hpp
engine/src/utils/: Time.cpp  Time.hpp
level_builder/: CMakeLists.txt
level_builder/levels/main_menu/: MainMenuScene.hpp
level_builder/src/: LibraryMain.cpp  LibraryMain.hpp
server/: CMakeLists.txt
server/src/: ServerMain.cpp
server/src/core/: LibraryLoader.cpp  LibraryLoader.hpp  Server.cpp  Server.hpp
